variables.Variables.scala.error
Erreur de compilation :
Variables:3: error: too many arguments for method estSurBiscuit: ()Boolean
while (estSurBiscuit(==fausse)){
                    ^